style/mobile.css
* {
  margin: 0;
  padding: 0;
  border: 0;
  }

  .main {
    padding-left: 0px;
    padding-right: 0px;
  }

body {
  margin: auto;
  max-width: 480px;
  overflow-x: hidden;
}



.header-logo-mobile {
  padding-left: 20px;
}

.nav-signup-mobile-link {
  padding-right: 20px;
  font-weight: bolder;
  font-size: 16px;
  color: #0065fc;
}

.header-mobile {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 20px;
}

.header-mobile-top {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  max-width: 480px;
  margin-bottom: 15px;
  padding-top: 20px;
}

.header-mobile-bot {
  width: 100%;
}

.nav a {
  padding: 0;
  width: 50%;
  text-align: center;
}

.linkhosts {
  padding-top: 0;
  border-top:none;
  border-bottom: 2px solid #0065FC;
  color: #0065FC;
}

.linkactivities {
  border-bottom: 2px solid #F2F2F2;
}

.nav-mobile {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: space-around;
}

.nav-mobile a {
  width: 50%;
  text-align: center;
  padding-bottom: 10px;
  font-weight: 500;
}

.header {
  display: none;
}

.search {
  display: flex;
  padding-left: 20px;
  padding-right: 20px;
}

.search-form-input {
  padding-left: 15px;
  border: 1.5px solid #F2F2F2;
  font-family: 'Raleway', sans-serif;
  font-weight: bold;
  color: black;
  font-size: 16px;
  font-weight: 800;
  width: 100%;
}

input::placeholder {
  font-family: 'Raleway', sans-serif;
  font-weight: bold;
  color: black;
  font-size: 16px;
  font-weight: 800;
}

.search-button-text {
  display: none;
}

.search-button {
  display: flex;
  appearance: auto;
  align-items: center;
  text-align: center;
  color: white;
  font-size: 0.94em;
  cursor: pointer;
  background-color: #0065FC;
  margin-left: -10px;
  padding: 1px 15px;
  border-style: none;
  border-radius: 14px 14px 14px 14px;
  font-weight: bold;
  outline: none;
}

.search-form-input::-webkit-search-cancel-button{
  position: relative;
  right: 20px;    
}

.fa-search:before {
  display: block;
}


.search-title {
  display: flex;
  align-items: center;
  margin-top: 10px;

}

.search-subtitle {
  margin-top: 15px;
  margin-bottom: 35px;
}

.filters {
  display: flex;
  flex-flow: column;
  align-items: flex-start;
  padding-left: 20px;
  padding-right: 20px;
}

.filters-title {
  margin-bottom: 15px;
  white-space: nowrap;
  margin-right: 0;
}

.filters-list {
  display: flex;
  flex-flow: row wrap;
}

.filter-option {
  margin-right: 10px;
  margin-bottom: 10px;
}

.filter-option:hover {
  transform: none;
  transition: none;
  background-color: #FFF;
}

.filter-title {
  font-size: 15px;
  padding-right: 13px;
}

.filters-results {
  padding-left: 20px;
  padding-right: 20px;
}

.hosts-container {
  background-color: #ffffff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0;
  padding: 0;
  width: auto;
}

.hosts {
  display: flex;
  flex-flow: column-reverse wrap;
  width: auto;
}

.hosts-title {
  margin: 0;
  padding-bottom: 25px;
  padding-top: 25px;
  padding-left: 20px;
  padding-right: 20px;
}

.hosts-cards {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  padding-left: 20px;
  padding-right: 20px;
}

.hosts-card {
  display: flex;
  flex-direction: column;
  margin: 0;
  margin-bottom: 25px;
  width: 100%;
}

.hosts-card:hover{
  transform: none;
  transition: none;
}

.hosts-card img {
  height: 140px;
  width: 100%;
  object-fit: cover;
}

.hosts-card-description > p {
  margin: 0px;
  margin-bottom: 5px;
}

.hosts-popular {
  flex: 1 1 100%;
  display: flex;
  flex-flow: column wrap;
  border-radius: 0px;
  padding-left: 20px;
  padding-right: 20px;
  width: auto;
}



.hosts-popular-title {
  display: flex;
  justify-content: space-between;
  white-space: nowrap;
}

.fa-chart-line {
  margin-left: 0px;
}

.hosts-popular-cards {
  display: flex;
  margin: 0;
  align-items: center;
  justify-content: center;
  margin-right: 0px;
  
}


.hosts-popular-card {
  width: auto;
  margin-bottom: 25px;
}

.hosts-popular-card:hover {
  transform: none;
  transition: none;
}

.hosts-view-more {
  padding-left: 20px;
  padding-right: 20px;
}
.activities {
  max-width: 480px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 20px;
  padding-right: 20px;
  margin: 0;
}

.activities-title {
margin-bottom: 0px;
}

.activities-list {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  margin-bottom: 20px;
}

.activities-title {
  margin-top: 20px;
  margin-bottom: 30px;
}

.activities-column {
  width: auto;
}

.activities-card {
  cursor: pointer;
  border-radius: 22px;
  box-shadow: 0px 3px 10px 3px rgb(40 40 40 / 15%);
  width: 100%;
  margin-bottom: 30px;
}

.activities-card:hover {
  transform: none;
  transition: none;
}

.activities-card.big img {
  height: 150px;
}

.activities-card.medium-l img {
  height: 150px;
}

.activities-card.small-s img {
  height: 150px;
}

.activities-card.medium-s img {
  height: 150px;
}

.activities-card.small-l img {
  height: 150px;
}

.footer {
  display: flex;
  flex-direction: column;
  height: auto;
  margin: 0;
  white-space: nowrap;
  padding: 0;
  padding-left: 20px;
  padding-right: 20px;
}

.footer-title {
  margin-bottom: 25px;
  margin-top: 25px;
}

.footer-infos {
  padding-left: 20px;
  margin-bottom: 15px;
} 

